Fixed login widget align

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -32,7 +32,7 @@ header h1 {
 
 header .right {
     float: right;
-    margin: 10px 140px 0px 0px;
+    margin: 10px 0px 0px 0px;
 }
 
 .title:hover {
@@ -48,7 +48,6 @@ header .right {
 
 .block input[type=text] {
     width: 100%;
-    /*padding: 5px 10px;*/
     font-size: 16px;
 }
 
